# icon-model-machine-learning-backbone

./: ._gitlab-ci.yml  .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS.TXT  CONTRIBUTING.md  Makefile.in  README.md  README_FTORCH.md  README_ORIGINAL.md  RELEASE_NOTES.md  REUSE.toml  collect.extra-libs.in  configure  configure.ac  configure~  depgen.c.config.in  depgen.f90.config.in  deplist.config.in  icon.mk.in  inlib.mk.in  make_runscripts  setup_ftorch
.gitlab/ci/: cscs-ci.yml  granules.yml
.gitlab/iconbot/: notifier.yml
.gitlab/issue_templates/: bug-report.md  build-failure-report.md  feature-request.md
.gitlab/merge_request_templates/: default.md  nwp-feature.md
config/bsc/: mn5.cpu.intel-2023.0.0  mn5.cpu.intel-openmpi-2023.0.0  mn5.cpu.nvhpc-24.5  mn5.gpu.nvhpc-23.11  mn5.gpu.nvhpc-24.5
config/buildbot/: alps_mch_test_cpu  alps_mch_test_gpu  balfrin_cpu_nvidia  balfrin_gpu_nvidia  booster_nvhpc_ompi  booster_nvhpc_psmpi  breeze_gcc  breeze_gcc_openmp  breeze_intel  breeze_intel_openmp  breeze_nag  buildModel  buildModel.sbatch  cluster_intel_ompi  cluster_intel_psmpi  cluster_nvhpc_psmpi  dwd_fcns.sh  dwd_nec_coupling  horeka_cpu_nvhpc  horeka_gcc  horeka_gpu_nvhpc  horeka_intel  levante_aurora  levante_coverage  levante_cpu_nvhpc  levante_cpu_nvhpc_dev  levante_gcc  levante_gcc_hybrid  levante_gpu_nvhpc  levante_gpu_nvhpc_dev  levante_gpu_validation  levante_intel  levante_intel_hybrid  levante_intel_hybrid_mixed  levante_intel_pio  levante_nag  levante_nag_serial  listExperiments  lumi_cpu  lumi_cpu_mixed  (+5 more)
config/cineca/: leo.common.nvhpc-23.1  leo.cpu.nvhpc-23.1  leo.gpu.nvhpc-23.1
config/csc/: README.md  exec.lumi.container.cce-16.0.1.1  lumi.cpu.cce  lumi.cpu.container.cce-16.0.1.1  lumi.cpu.native.cce-16.0.1  lumi.cpu.native.cce-17.0.1  lumi.gpu.cce  lumi.gpu.container.cce-16.0.1.1  lumi.gpu.container.cce-18.0.1  lumi.gpu.native.cce-16.0.1  lumi.gpu.native.cce-17.0.1  lumi.gpu.native.cce-17.0.1-debug
config/cscs/: MCH_ENV_TAG  SANTIS_ENV_TAG  SPACK_TAG_MCH  SPACK_TAG_SANTIS  alps_mch.cpu.nvidia  alps_mch.cpu.nvidia_mixed  alps_mch.gpu.nvidia  alps_mch.gpu.nvidia_mixed  build_and_test_mch_prod  create_sh_env  santis.cpu.nvhpc  santis.gpu.nvhpc  spack_install
config/dkrz/: aurora.VE.nfort-3.5.1_mpi-3.2.0  aurora.VE.nfort-4.0.0_mpi-3.2.0  aurora.VE.nfort-5.0.1_mpi-3.4.0  aurora.VH.gcc_mpi-3.2.0  aurora.VH.gcc_mpi-3.4.0  levante.cpu.nvhpc  levante.cpu.nvhpc-24.11  levante.cpu.nvhpc-24.7  levante.cpu.nvhpc-24.9  levante.gcc-11.2.0  levante.gpu.nvhpc  levante.gpu.nvhpc-24.11  levante.gpu.nvhpc-24.7  levante.gpu.nvhpc-24.9  levante.intel-2021.5.0  levante.nag-7.1.7101  module_switcher
config/dwd/: gpnl.cpu.nvidia-24.7  gpnl.gpu.nvidia-24.7  inlinelist.sh  linuxWS.cpu.nvidia-22.7  linuxWS.gcc  linuxWS.gpu.nvidia-22.7  rcl.VE.bb-dwd_nec_coupling  rcl.VE.bb-dwd_nec_hybrid  rcl.VE.bb-dwd_nec_oper  rcl.VE.nfort-5.1.0_mpi-3.5_oper  rcl.VE.nfort-5.1.0_mpi-3.5_oper_ftrace  rcl.VH.bb-dwd_nec_coupling  rcl.VH.bb-dwd_nec_hybrid  rcl.VH.bb-dwd_nec_oper  rcl.VH.gcc-11.2.0_mpi-3.5_oper  rcl.VH.gcc-12.3.0_mpi-3.5_oper  rcl.VH.gcc-9.2.0_mpi-3.5_oper
config/ecmwf/: atos2020.gcc-11.2.0  atos2020.intel-2021.4  cca.cray-8.5.8
config/generic/: gcc
config/hlrs/: hawk.intel_21_mpt  hawk.intel_mpt_clm_optim  hunter.cpe_clm
config/jsc/: README.md  jedi.cpu.ompi_nvhpc-24.3  jedi.cpu.psmpi_nvhpc-24.3  jedi.gpu.ompi_nvhpc-24.3  jedi.gpu.psmpi_nvhpc-24.3  juwels_booster.gpu.ompi_nvhpc-23.1  juwels_booster.gpu.psmpi_nvhpc-23.1  juwels_booster.gpu.psmpi_nvhpc-25.3  juwels_cluster.cpu.psmpi_nvhpc-23.1  juwels_cluster.cpu.psmpi_nvhpc-25.3  juwels_cluster.psmpi_intel-2022.1.0
config/kit/: hk.common.nvhpc-24.7  hk.cpu.gnu-13-openmpi-5.0  hk.cpu.intel-2023-openmpi-5.0  hk.cpu.nvhpc  hk.cpu.nvhpc-24.7  hk.gpu.nvhpc  hk.gpu.nvhpc-24.7
config/mpim/: bullseye.gcc  bullseye.mpich.cpu.nvhpc-23.7.0  bullseye.mpich.gcc-14.2.0  bullseye.mpich.gpu.nvhpc-23.7.0  bullseye.mpich.intel-2021.6.0  bullseye.mpich.nag-7.2.7200  bullseye.mpich.oneapi-2022.1.0  bullseye.nompi.cpu.nvhpc-23.7.0  bullseye.nompi.gcc-14.2.0  bullseye.nompi.intel-2021.6.0  bullseye.nompi.nag-7.2.7200  bullseye.nompi.oneapi-2022.1.0  bullseye.openmpi.cpu.nvhpc-23.7.0  bullseye.openmpi.gcc-14.2.0  bullseye.openmpi.intel-2021.6.0  bullseye.openmpi.nag-7.2.7200  bullseye.openmpi.oneapi-2022.1.0
doc/Namelist_overview/: Namelist_overview.tex  icon_nml_tables.tex  icon_ocean_nml_tables.tex  icon_waves_nml_tables.tex  incompatible_changes.tex  mo_expression_doc.tex
doc/www/: conf.py  index.md
etc/: aero_provider.py  o3_cmip_provider.py
etc/Modules/: .pkg  icon-levante  icon-runtime
m4/: ax_compare_version.m4
run/: Makefile  add_START_MODEL_function  add_refgen_routines  add_required_atmo_hydrostatic_files  add_required_atmo_non-hydrostatic_files  add_required_ocean_files  add_run_routines  ana_varnames_map_file.txt  collect.set-up.info.in  create-hostfile.py  create_target_header  dict.echam_tpe.mpim  dict.extpar  dict.icoham.mpim  dict.icon.hdcp2  dict.iconam.mpim  dict.iconam.mpim_fuernwp  dict.latbc  dict.output.dwd  dict.output.mch  exec.iconrun  exp.aes_amip  exp.aes_amip_test  exp.aes_amip_test_update_base  exp.aes_bubble  exp.aes_bubble_land  exp.aes_bubble_land_test  exp.aes_bubble_land_tmx  exp.aes_bubble_test  exp.aes_bubble_tmx  exp.art_oem  exp.atm_amip_les_test  exp.atm_ape_test  exp.atm_cph_lam_20km  exp.atm_cph_nest_R2B4  exp.atm_cph_nest_R2B4_test  exp.atm_cph_nest_R2B4_test_update_base  exp.atm_dyamond_nwp_rceTorus  exp.atm_energy_test  exp.atm_heldsuarez  (+96 more)
run/checksuite.art/: exp.art_levante_test.run  exp.art_levante_test_short.run  (+2 more)
support/: dummy_hip_events.hip.cc  index_list.cu  index_list.h  index_list.hip.cc  mo_util_uuid.f90  mo_util_uuid_types.f90  util_multifile_restart.c  util_uuid.c  util_uuid.h
utils/: cdo_set_date  days_in_year  filelock  get_climyear  icon_sorted_deps.sh  id++  move_to_prefix.sh  patch_namelist  pvcs.py  timewarp
utils/cmake-wrapper/: CMakeLists.txt
vertical_coord_tables/: atm_hyb_sz_30  atm_hyb_sz_40
(+1869 files in other folders)
